--- a/README.Rmd
+++ b/README.Rmd
@@ -21,24 +21,24 @@ with par/pop/log files ever again.
 
 ## Introduction
 
-[ADMIXTOOLS](http://www.genetics.org/content/192/3/1065) is a widely used
+[ADMIXTOOLS](https://github.com/DReichLab/AdmixTools/) is a widely used
 software package for calculating admixture statistics and testing population
 admixture hypotheses. However, although powerful and comprehensive, it is not
 exactly known for being user-friendly.
 
 A typical ADMIXTOOLS workflow often involves a combination of `sed`/`awk`/shell
 scripting and manual editing to create different configuration files. These are
-then passed as command-line arguments to one of ADMIXTOOLS commands and control
-how to run a particular analysis. The results are then redirected to another
-file, which has to be parsed by the user to extract values of interest, often
-using command-line utilities again or (worse) by manual copy-pasting. Finally,
-the processed results are analysed in R, Excel or another program.
+then passed as command-line arguments to one of ADMIXTOOLS commands, and
+control how to run a particular analysis. The results are then redirected to
+another file, which has to be parsed by the user to extract values of interest,
+often using command-line utilities again or (worse) by manual copy-pasting.
+Finally, the processed results are analysed in R, Excel or another program.
 
 This workflow is very cumbersome, especially if one wants to explore many
 hypotheses involving different combinations of populations. Most importantly,
-however, it makes it difficult to follow good practices of reproducible
-science, as it is nearly impossible to construct reproducible automated
-"pipelines".
+however, it makes it difficult to follow the rules of best practice for
+reproducible science, as it is nearly impossible to construct reproducible
+automated "pipelines".
 
 This R package makes it possible to perform all stages of an ADMIXTOOLS
 analysis entirely from R. It provides a set of convenient functions that
@@ -86,4 +86,5 @@ config and population files, runs ADMIXTOOLS, parses its log output and returns
 the result as a `data.frame` object. It does all of this behind the scenes,
 without the user having to deal with low-level technical details.
 
-**To see many more examples, please check out the [tutorial vignette](./articles/tutorial.html).**
+**To see many more examples, please check out the [tutorial
+vignette](https://bodkan.net/admixr/articles/tutorial.html).**
