--- a/vignettes/paper.Rmd
+++ b/vignettes/paper.Rmd
@@ -1,8 +1,7 @@
 ---
-title: "admixr - paper"
+title: "admixr - R package for facilitating ADMIXTOOLS analyses"
 author:
-  - Martin Petr, Janet Kelso
-date: "`r Sys.Date()`"
+#date: "`r Sys.Date()`"
 output: rmarkdown::html_vignette
 vignette: >
   %\VignetteIndexEntry{Vignette Title}
@@ -15,33 +14,125 @@ knitr::opts_chunk$set(
   collapse = TRUE,
   comment = "#>"
 )
+library(ggplot2)
+library(admixr)
+path_to_eigenstrat <- file.path(system.file(package = "admixr", "extdata"), "snps")
 ```
 
-# _admixr - R package for performing ADMIXTOOLS analyses_
+## Abstract
 
-## Summary
+We present a new R package _admixr_, which provides a convenient interface for
+the ADMIXTOOLS software suite. In a traditional ADMIXTOOLS workflow, the user
+must first generate a set of text configuration files tailored to each
+individual analysis, often using a combination shell scripting and manual
+editing. After executing an ADMIXTOOLS program on the command line using the
+provided configuration files, generated output files need to be parsed to
+extract values of interest before they can be used in a downstream analysis.
+This process is quite cumbersome and error-prone, especially when testing
+complex hypotheses involving many samples. Our package simplifies this process
+by automating all low-level configuration and parsing steps without any user
+intervention, making the previously complex workflow as simple as running a
+single line of R code. Furthermore, by unifying all steps of an analytic
+workflow under a single framework, this package allows building of fully
+automated analytic pipelines, significantly improving the reproducibility of
+population genetic studies.
 
-We present a new R package called admixr, which makes it possible to perform all stages of ADMIXTOOLS analyses directly from R. This avoids the need for cumbersome production of text configuration files and parsing of output files on the command-line for each individual analysis. Compared to a traditional ADMIXTOOLS workflow that relies on a combination of shell scripting, editing and manual copy-pasting, our package reduces the number of steps required into a couple of lines of R code, dramatically reducing cognitive load for the user and potential for bugs Importantly, by utilizing the R environment for all steps of ADMIXTOOLS analyses, from data processing and running of analyses, to output processing, statistical analysis and plotting, this package allows building of fully automated analytic pipelines, improving the reproducibility of population genetic studies.
+**Source code and documentation:** Source code, installation instructions,
+documentation and a tutorial can be accessed on the package website at
+[http://bodkan.net/admixr](http://bodkan.net/admixr).
 
 ## Introduction
 
-The growing numbers of available ancient and modern DNA samples have transformed our understanding of the evolutionary history of humans and other species. Several statistical methods have been developed to make inferences about past population movements and admixture events from genomic data. Chief among those has been a series of admixture statistics such as $f_3$, $f_4$, $f_4$-ratio and $D$ statistics as implemented in the set of command-line utilities distributed in the ADMIXTOOLS software package. Despite being instrumental in making inferences about ancient and modern human history - being used in nearly all recent studies in high-profile journals - ADMIXTOOLS utilities suffer from several disadvantages. First, each individual analysis or a hypothesis test relies on a set of text configuration files which are commonly generated using a combination of shell scripting and manual editing. This is especially problematic as both the number of available samples and testable hypotheses steadily increases, because each separate analysis often requires a new set of configuration files, thus making this workflow not scalable. Most importantly, however, ADMIXTOOLS' reliance on manual user intervention and copy-pasting for both the preparation of configuration files and extracting information from output files for further analysis makes it difficult to build automated analytic pipelines. This makes it difficult to follow the current best practices for reproducible computing. To overcome these challenges, we present a new package for the R programming language that provides convenient wrappers for ADMIXTOOLS command-line utilities and completely abstract away all technical details This package not only drastically reduces the amount of code needed to perform population genetic analyses, but presents a significant improvement for reproducible research by making it possible to build fully automatic analytic pipelines.
+The growing numbers of available ancient and modern DNA samples have
+transformed our understanding of the evolutionary history of humans and other
+species. Several statistical methods have been developed to make inferences
+about past population movements and admixture events from genomic data. Chief
+among those has been a series of admixture statistics such as $f_3$, $f_4$,
+$f_4$-ratio and $D$ statistics as implemented in the set of command-line
+utilities distributed in the ADMIXTOOLS software package. Despite being
+instrumental in making inferences about ancient and modern human history -
+indeed, they have been used in nearly all recent studies of ancient DNA in
+high-profile scientific journals - ADMIXTOOLS utilities suffer from several
+disadvantages. First, each individual analysis or hypothesis test rely on a set
+of text configuration files which have to be generated using a combination of
+shell scripting and manual editing. Furthermore, after running an ADMIXTOOLS
+command on the command-line, the user needs to extract relevant values from a
+log file before they can be imported in another software for further analysis
+and plotting. This workflow is quite cumbersome and error-prone, especially if
+the user needs to quickly iterate through complex hypotheses involving many
+different populations or samples. Most importantly, however, any reliance on
+manual user intervention for both the preparation and parsing of configuration
+and output log files makes it difficult to follow the rules of good practice of
+reproducible research. To overcome these challenges, we present a new R package
+which provides a unified interface for population admixture analyses, utilizing
+ADMIXTOOLS software suite for the underlying calculations. The package
+completely automates the generation, processing and parsing of all intermediate
+file, hiding all unnecessary low-level details from the users and allowing them
+to focus on the analysis itself. Importantly, in addition to providing a more
+user-friendly interface, unifying the entire analytic workflow in an R
+environment makes it possible to implement fully automated reproducible
+analytic pipelines.
 
-## Implementation
 
-The `admixr` package is implemented using the R programming language. It's core comprises of series of R functions with a unified programming interface, such as `f3()`, `d()`, `f4()`, `f4ratio()` and `qpAdm()`. Generally, performing even the most trivial analysis using the ADMIXTOOLS package presents a significant amount of work for the user. For example, in order to calculate $f_4$-ratio statistic such as $f_4(\textrm{Nea}_1, \textrm{Chimp}; \textrm{Eur}, \textrm{Afr}) / f_4(\textrm{Nea}_1, \textrm{Chimp}; \textrm{Nea}_2, \textrm{Afr})$, the user needs to do the following:
+## Implementation and example usage
 
-- create a "par" file describing the location of data in the EIGENSTRAT format, the list of population labels
+The _admixr_ package is implemented using the R programming language. It's core
+functionality comprises of a series of R functions: `f3()`, `d()`, `f4()`,
+`f4ratio()` and `qpAdm()`, each corresponding to one of the population
+admixture statistics implemented in ADMIXTOOLS. Traditionally, performing even
+the most trivial analysis using the ADMIXTOOLS package presents a significant
+amount of overhead for the user. For example, in order to calculate $f_4$-ratio
+statistic such as
 
-Note that changing the analysis setup in a slightly different way requires 
+$$f_4(\textrm{Altai}, \textrm{Chimp}; \textrm{X}, \textrm{Mbuti}) /
+  f_4(\textrm{Altai}, \textrm{Chimp}; \textrm{Vindija}, \textrm{Mbuti}),$$
 
-In contrast, the same analysis using the `admixr` package can be run using the following R code:
+that is, to estimate the proportion of Neandertal ancestry in a set of
+individuals $X$, the user needs to create parameter files and population list
+files, tailored for this specific analysis, run the `qpF4ratio` program on the
+command-line, and to parse the log file to obtain relevant information (see
+Supplementary Information for an example of performing the complete analysis
+using a traditional ADMIXTOOLS command-line-based workflow). Note that changing
+the analysis setup in a slightly different way or including a different set of
+samples requires re-generating all files again.
 
-```{r, eval = FALSE}
-result <- f4ratio(X = "Eur", A = "Nea1", B = "Nea2", C = "Afr", O = "Chimp", prefix = eigenstrat)
+In contrast, the same analysis using the _admixr_ package can be performed
+using the following R code:
+
+```{r}
+result <- f4ratio(
+    X = c("French", "Han", "Papuan", "Yoruba"),
+    A = "Altai", B = "Vindija", C = "Mbuti", O = "Chimp",
+    prefix = path_to_eigenstrat
+)
 ```
 
-This line performs all the low-level work
+Internally, this code generates all necessary configuration files, runs the
+`qpF4ratio` command, parses the output file, and presents the user with the
+following R `data.frame` object for further statistical analysis an plotting:
 
-## Examples
-## Conclusion
+```{r, echo = FALSE}
+knitr::kable(result)
+```
+
+Other ADMIXTOOLS analyses can be performed in a similar way, and are described
+in the tutorial R vignette in a more detail.
+
+
+## Additional functionality
+
+The fact that ADMIXTOOLS requires data to be in a peculiar fileformat called
+EIGENSTRAT, makes data processing and filtering can be challenging because this
+format is not supported by most of the standard bioinformatic tools. Therefore,
+to simplify handling and processing of EIGENSTRAT datasets, _admixr_ implements
+several functions that can be useful during data-preparation:
+
+* Filtering of SNP data based on regions specified in a BED file &nbsp; `filter_sites()`.
+* Merging of EIGENSTRAT datasets &nbsp; `merge_eigenstrat()`.
+* Calculating coverage of sites in each sample &nbsp; `count_snps()`.
+* Merging of individual population labels into larger groups &nbsp; `group_labels()`. 
+* Conversion of data between VCF and EIGENSTRAT formats &nbsp; `vcf_to_eigenstrat()`, `eigenstrat_to_vcf()`.
+
+## Funding
+
+???
