--- a/vignettes/paper.Rmd
+++ b/vignettes/paper.Rmd
@@ -16,9 +16,9 @@ knitr::opts_chunk$set(
   collapse = TRUE,
   comment = "#>"
 )
-library(ggplot2)
+
 library(admixr)
-path_to_eigenstrat <- file.path(system.file(package = "admixr", "extdata"), "snps")
+path_to_eigenstrat <- download_data()
 ```
 
 ## Abstract
