--- a/README.Rmd
+++ b/README.Rmd
@@ -70,17 +70,16 @@ package! No shell scripting, no copy-pasting and manual editing of text files.
 The only thing you need is a working ADMIXTOOLS installation and a path to
 EIGENSTRAT data (a trio of ind/snp/geno files), which we call `prefix` here.
 
-```{r, echo = FALSE}
-library(admixr)
-path_to_eigenstrat <- download_data()
-```
-
 ```{r example}
 library(admixr)
 
+# download a small testing dataset to a temporary directory and return its
+# EIGENSTRAT prefix (i.e. shared path to the trio of ind/snp/geno files)
+eigenstrat_prefix <- download_data()
+
 result <- d(
     W = c("French", "Sardinian"), X = "Yoruba", Y = "Vindija", Z = "Chimp",
-    prefix = path_to_eigenstrat
+    prefix = eigenstrat_prefix
 )
 
 result
