--- a/README.Rmd
+++ b/README.Rmd
@@ -47,6 +47,12 @@ ADMIXTOOLS programs, allowing users to focus on the analysis itself.
 
 ## Installation instructions
 
+**Note (2018/09/6):** This package is currently in the last phase of testing
+and polishing the API before I submit it to [CRAN](https://cran.r-project.org).
+It's mostly stable now and you can definitely use it for your own work, but if
+you decide to use it, please make sure to check back here for instructions on
+how to install the officially released version.
+
 To install `admixr` from Github you need to install the package `devtools`
 first. You can simply run:
 
